<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:textAlignment="viewStart"
    tools:context=".View.CreateProfileFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:textAlignment="viewStart">

        <TextView
            android:id="@+id/editProfileText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="163dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="163dp"
            android:layout_marginBottom="704dp"
            android:text="@string/EditProfile"
            android:textColor="#3949AB"
            android:textSize="24sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.671"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0" />

        <TextView
            android:id="@+id/passwordText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="170dp"
            android:layout_marginEnd="21dp"
            android:text="@string/setPassword"
            android:textColor="#5E35B1"
            app:layout_constraintEnd_toStartOf="@+id/passwordEditText"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/EditPasswordText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="117dp"
            android:ems="10"
            android:inputType="textPassword"
            android:minHeight="48dp"
            android:text="@string/empty"
            app:layout_constraintStart_toEndOf="@+id/passwordText"
            app:layout_constraintTop_toBottomOf="@+id/editProfileText" />

        <Button
            android:id="@+id/setPasswordButton"
            android:layout_width="69dp"
            android:layout_height="48dp"
            android:layout_marginTop="154dp"
            android:text="@string/SetButton"
            android:textAlignment="viewStart"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/bioText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginBottom="11dp"
            android:text="@string/setBio"
            android:textColor="@color/purple_500"
            app:layout_constraintBottom_toTopOf="@+id/EditBioText"
            app:layout_constraintStart_toStartOf="parent" />

        <EditText
            android:id="@+id/EditBioText"
            android:layout_width="382dp"
            android:layout_height="123dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="11dp"
            android:ems="10"
            android:inputType="textPersonName"
            android:text="@string/empty"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/bioText" />

        <Button
            android:id="@+id/setBioButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="28dp"
            android:layout_marginEnd="301dp"
            android:layout_marginBottom="251dp"
            android:text="@string/SetButton"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/EditBioText" />

        <Button
            android:id="@+id/doneButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="158dp"
            android:layout_marginTop="176dp"
            android:layout_marginEnd="159dp"
            android:layout_marginBottom="104dp"
            android:text="@string/done"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/EditBioText" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</FrameLayout>