...
    <string name="userExists">Sorry, this user already exists. Pick a new username.</string>
    <string name="invalidCredentials">Incorrect Username or Password. Try again!</string>
    <string name="backToProfile">Back</string>
    <string name="accept">Request Accepted!</string>
    <string name="decline">Request Declined!</string>
    <string name="logout">Logout</string>
    <string name="login">LogIn successful</string>
</resources>
